--- a/_layouts/post2.html
+++ b/_layouts/post2.html
@@ -4,14 +4,14 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 {% if page.description %}<meta name="description" content="{{page.description}}" />{% else %}<meta name="description" content="Karl Seguin's Blog - A mix of coding and creative writing" />{% endif %}
 <style>
-body{background:#fff;font-family:sans-serif;max-width:700px;margin:25px auto;}
+body{background:#fff;font-family:verdana,sans-serif;max-width:700px;margin:25px auto;font-size:105%;}
 pre{padding:5px;color:#000;position:relative;left:calc((100vw - 700px) / 2 * -1);padding-left:calc((100vw - 700px) / 2);width:calc(100vw - (100vw - 690px)/2);background:#fafafa;}
 pre, code{font-family:menlo,"Lucida Console",monospace}
-code{padding:2px;font-size:90%;background:rgba(245, 230, 150, 0.2);border-radius:2px;}
+code{padding:2px;font-size:90%;background:#f9f5d6}
 pre > code{border:none;background:#fafafa !important;padding: 0.5em;}
 pre > code.nohighlight{padding:0;}
-p, pre, li{line-height:24px;}
-p, pre, ul {margin-bottom:20px;}
+p, pre, li{line-height:28px;}
+p, pre, ul {margin-bottom:25px;}
 ul{margin-left:20px}
 #home{background:#444;color:#fff;padding:6px 10px;text-decoration:none;position:absolute;top:0;left:0;}
 h1{margin:0}
